--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <button id="start"><span>Start</span></button>
 <button id="clear"><span>Clear</span></button>
 <button id="random"><span>Random</span></button>
+<button id="note"><span>Play note</span></button> 
 </div>
-    
+
+<script src="https://tonejs.github.io/build/Tone.js"></script> 
 <script src="code.js"></script>
     
 </body>
