--- a/chatGPT/index.html
+++ b/chatGPT/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="grid"></div>
+    <button id="playPause">Play / Pause</button>
+    <button id="clear">Clear</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
     <script src="script.js"></script>
