--- a/chatGPT/index.html
+++ b/chatGPT/index.html
@@ -12,6 +12,6 @@
     <button id="clear">Clear</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
-    <script src="script.js"></script>
+    <script src="script_osc.js"></script>
 </body>
 </html>
