--- a/chatGPT/index.html
+++ b/chatGPT/index.html
@@ -10,8 +10,12 @@
     <div id="grid"></div>
     <button id="playPause">Play / Pause</button>
     <button id="clear">Clear</button>
+    <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+      </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
     <script src="script_osc.js"></script>
+
 </body>
 </html>
