Creating new polysynth along the way

--- a/chatGPT/index.html
+++ b/chatGPT/index.html
@@ -15,7 +15,7 @@
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
-    <script src="script_osc.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
