--- a/chatGPT/index.html
+++ b/chatGPT/index.html
@@ -10,6 +10,8 @@
     <div id="grid"></div>
     <button id="playPause">Play / Pause</button>
     <button id="clear">Clear</button>
+    <button id="glider">Draw glider</button>
+    
     <div class="slidecontainer">
         <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
       </div>
