--- a/video/index.html
+++ b/video/index.html
@@ -3,14 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camera Pixel Grid</title>
+    <title>Camera Pixel Grid 3</title>
+    <style>
+        #video, #canvas {
+            display: none;
+        }
+
+        #pixel-grid {
+            display: grid;
+            grid-template-columns: repeat(20, 1fr);
+            grid-template-rows: repeat(30, 1fr);
+            width: 640px; /* Samme som videoens bredde */
+            height: 480px; /* Samme som videoens høyde */
+        }
+
+        .pixel {
+            width: 20px;
+            height: 20px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-    <h1>Camera Pixel Grid 2</h1>
-    <video id="video" width="640" height="480" autoplay></video>
+    <h1>Camera Pixel Grid 3</h1>
+    <div id="video-container">
+        <video id="video" width="640" height="480" autoplay></video>
+        <canvas id="canvas" width="20" height="30"></canvas>
+    </div>
     <div id="pixel-grid"></div>
 
     <script>
+        let lastFrame = null;
+        let lastMovementTime = Date.now();
+
+        function processFrame() {
+            const video = document.getElementById('video');
+            const canvas = document.getElementById('canvas');
+            const context = canvas.getContext('2d');
+
+            canvas.width = 20;
+            canvas.height = 30;
+
+            context.drawImage(video, 0, 0, canvas.width, canvas.height);
+            const imageData = context.getImageData(0, 0, canvas.width, canvas.height);
+
+            // Convert image to grayscale and increase contrast
+            const grayImageData = grayscale(imageData);
+            const contrastImageData = increaseContrast(grayImageData);
+
+            // Simplify image to 20x30 pixels
+            const simplifiedPixels = simplifyImage(contrastImageData);
+
+            // Draw pixel grid
+            drawPixelGrid(simplifiedPixels);
+            
+            // Check for movement
+            const currentFrame = JSON.stringify(simplifiedPixels);
+            const now = Date.now();
+            const timeDiff = now - lastMovementTime;
+
+            if (currentFrame !== lastFrame) {
+                lastMovementTime = now;
+                lastFrame = currentFrame;
+            } else if (timeDiff >= 500) { // If no movement for half a second
+                resetPixelGrid();
+            }
+
+            requestAnimationFrame(processFrame);
+        }
+
+        function grayscale(imageData) {
+            const grayImageData = new Uint8ClampedArray(imageData.width * imageData.height);
+
+            for (let i = 0; i < imageData.data.length; i += 4) {
+                const r = imageData.data[i];
+                const g = imageData.data[i + 1];
+                const b = imageData.data[i + 2];
+                const gray = 0.2126 * r + 0.7152 * g + 0.0722 * b;
+                grayImageData[i / 4] = gray;
+            }
+
+            return grayImageData;
+        }
+
+        function increaseContrast(imageData) {
+            const contrastImageData = new Uint8ClampedArray(imageData.length);
+
+            const min = Math.min(...imageData);
+            const max = Math.max(...imageData);
+
+            for (let i = 0; i < imageData.length; i++) {
+                contrastImageData[i] = (255 / (max - min)) * (imageData[i] - min);
+            }
+
+            return contrastImageData;
+        }
+
+        function simplifyImage(imageData) {
+            const threshold = 128;
+            const simplifiedPixels = [];
+
+            for (let y = 0; y < 30; y++) {
+                for (let x = 0; x < 20; x++) {
+                    const index = y * 20 + x;
+                    if (imageData[index] < threshold) {
+                        simplifiedPixels.push({x, y});
+                    }
+                }
+            }
+
+            return simplifiedPixels;
+        }
+
+        function drawPixelGrid(simplifiedPixels) {
+            const pixelGrid = document.getElementById('pixel-grid');
+            pixelGrid.innerHTML = '';
+
+            for (let y = 0; y < 30; y++) {
+                for (let x = 0; x < 20; x++) {
+                    const pixel = document.createElement('div');
+                    pixel.className = 'pixel';
+                    const isActive = simplifiedPixels.some(p => p.x === x && p.y === y);
+                    if (isActive) {
+                        pixel.style.backgroundColor = 'black';
+                    }
+                    pixelGrid.appendChild(pixel);
+                }
+            }
+        }
+
+        function resetPixelGrid() {
+            const pixelGrid = document.getElementById('pixel-grid');
+            pixelGrid.innerHTML = '';
+        }
+
         async function startCamera() {
             try {
                 const stream = await navigator.mediaDevices.getUserMedia({ video: true });
@@ -20,54 +146,6 @@
                 processFrame();
             } catch (err) {
                 console.error('Error accessing camera: ', err);
-            }
-        }
-
-        function processFrame() {
-            const video = document.getElementById('video');
-            const canvas = document.createElement('canvas');
-            const context = canvas.getContext('2d');
-            canvas.width = 20;
-            canvas.height = 30;
-
-            context.drawImage(video, 0, 0, 20, 30);
-            const imageData = context.getImageData(0, 0, 20, 30);
-            const darkPixels = findDarkPixels(imageData);
-            drawPixelGrid(darkPixels);
-
-            requestAnimationFrame(processFrame);
-        }
-
-        function findDarkPixels(imageData) {
-            const darkPixels = [];
-
-            for (let y = 0; y < 30; y++) {
-                for (let x = 0; x < 20; x++) {
-                    const index = (y * 20 + x) * 4; // 4 bytes per pixel (RGBA)
-                    const brightness = imageData.data[index] + imageData.data[index + 1] + imageData.data[index + 2];
-                    if (brightness < 100) {
-                        darkPixels.push({x, y});
-                    }
-                }
-            }
-
-            return darkPixels;
-        }
-
-        function drawPixelGrid(darkPixels) {
-            const pixelGrid = document.getElementById('pixel-grid');
-            pixelGrid.innerHTML = '';
-
-            for (let y = 0; y < 30; y++) {
-                for (let x = 0; x < 20; x++) {
-                    const pixel = document.createElement('div');
-                    pixel.className = 'pixel';
-                    const isActive = darkPixels.some(p => p.x === x && p.y === y);
-                    if (isActive) {
-                        pixel.style.backgroundColor = 'black';
-                    }
-                    pixelGrid.appendChild(pixel);
-                }
             }
         }
 
