--- a/video/index2.html
+++ b/video/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Combined Canvas</title>
+    <title>Combined Canvas 2</title>
     <style>
         body {
             display: flex;
@@ -60,7 +60,155 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
-    <script src="script.js"></script>
-    <script src="video.js"></script>
+    <script>
+        const rows = 20;
+        const cols = 20;
+        let interval = 500 // Tidsintervall i millisekunder
+        let isPlaying = false;
+        let timerId;
+
+        const gridContainer = document.getElementById('grid');
+        const pixelGridContainer = document.getElementById('pixel-grid');
+        const playPauseButton = document.getElementById('playPause');
+        const clearButton = document.getElementById('clear');
+        const gliderButton = document.getElementById('glider');
+        const slider = document.getElementById("myRange");
+
+        let grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
+
+        const pentatonicScale = ['D2', 'E2', 'G2', 'A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5', 'A5', 'C6'];
+
+        slider.oninput = function() {
+            interval = this.value;
+        }
+
+        function clearGrid() {
+            grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
+            const cells = document.querySelectorAll('.cell');
+            cells.forEach(cell => cell.classList.remove('alive'));
+        }
+
+        function togglePlay() {
+            isPlaying = !isPlaying;
+            if (isPlaying) {
+                playPauseButton.textContent = 'Pause';
+                timerId = setInterval(updateGrid, interval);
+            } else {
+                playPauseButton.textContent = 'Play';
+                clearInterval(timerId);
+            }
+        }
+
+        function drawGlider() {
+            for (let i = 0; i < rows; i++) {
+                for (let j = 0; j < cols; j++) {
+                    if ((i == 0 && j == 0) || (i == 1 && j == 1) || (i == 1 && j == 2) || (i == 2 && j == 0) || (i == 2 && j == 1)) {
+                        const cell = gridContainer.children[i * cols + j];
+                        cell.classList.toggle('alive');
+                        grid[i][j] = 1;
+                    }
+                }
+            }
+        }
+
+        function updateGrid() {
+            let newGrid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
+
+            const pixels = document.querySelectorAll('.pixel');
+            pixels.forEach((pixel, index) => {
+                const x = index % 20;
+                const y = Math.floor(index / 20);
+                if (pixel.style.backgroundColor === 'black') {
+                    newGrid[y][x] = 1;
+                }
+            });
+
+            for (let i = 0; i < rows; i++) {
+                for (let j = 0; j < cols; j++) {
+                    let neighbors = 0;
+                    for (let x = -1; x <= 1; x++) {
+                        for (let y = -1; y <= 1; y++) {
+                            if (i + x >= 0 && i + x < rows && j + y >= 0 && j + y < cols) {
+                                neighbors += grid[i + x][j + y];
+                            }
+                        }
+                    }
+                    neighbors -= grid[i][j];
+
+                    if (grid[i][j] === 1 && (neighbors < 2 || neighbors > 3)) {
+                        newGrid[i][j] = 0;
+                    } else if (grid[i][j] === 0 && neighbors === 3) {
+                        newGrid[i][j] = 1;
+                    } else {
+                        newGrid[i][j] = grid[i][j];
+                    }
+                }
+            }
+
+            const cells = document.querySelectorAll('.cell');
+            newGrid.forEach((row, i) => {
+                row.forEach((cell, j) => {
+                    if (cell === 1) {
+                        cells[i * cols + j].classList.add('alive');
+                    } else {
+                        cells[i * cols + j].classList.remove('alive');
+                    }
+                });
+            });
+
+            grid = newGrid;
+        }
+
+        function startCamera() {
+            const video = document.createElement('video');
+            const canvas = document.createElement('canvas');
+            const ctx = canvas.getContext('2d');
+
+            navigator.mediaDevices.getUserMedia({ video: true })
+                .then(function(stream) {
+                    video.srcObject = stream;
+                    video.play();
+                })
+                .catch(function(err) {
+                    console.error('Error accessing camera: ', err);
+                });
+
+            video.addEventListener('play', function() {
+                const width = video.videoWidth;
+                const height = video.videoHeight;
+                canvas.width = width;
+                canvas.height = height;
+
+                function processFrame() {
+                    ctx.drawImage(video, 0, 0, width, height);
+                    const imageData = ctx.getImageData(0, 0, width, height);
+
+                    for (let i = 0; i < imageData.data.length; i += 4) {
+                        const r = imageData.data[i];
+                        const g = imageData.data[i + 1];
+                        const b = imageData.data[i + 2];
+                        const gray = 0.2126 * r + 0.7152 * g + 0.0722 * b;
+                        if (gray < 128) {
+                            const x = (i / 4) % width;
+                            const y = Math.floor(i / (4 * width));
+                            const cell = gridContainer.children[y * cols + x];
+                            cell.classList.add('alive');
+                            grid[y][x] = 1;
+                        }
+                    }
+
+                    requestAnimationFrame(processFrame);
+                }
+
+                processFrame();
+            });
+        }
+
+        startCamera();
+
+        playPauseButton.addEventListener('click', togglePlay);
+        clearButton.addEventListener('click', clearGrid);
+        gliderButton.addEventListener('click', drawGlider);
+    </script>
 </body>
 </html>
