--- a/video/index2.html
+++ b/video/index2.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Camera Pixel Grid speil</h1>
+    <h1>Camera Pixel Grid speil 2</h1>
     <div id="video-container">
         <video id="video" width="640" height="480" autoplay></video>
         <canvas id="canvas" width="20" height="20"></canvas>
     </div>
+
     <div id="pixel-grid"></div>
+    <br><br>
     <button id="playPause">Play / Pause</button>
     <button id="clear">Clear</button>
     <button id="glider">Draw glider</button>
