--- a/video/index2.html
+++ b/video/index2.html
@@ -24,7 +24,7 @@
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 
 </body>
 </html>
