--- a/video/index.html
+++ b/video/index.html
@@ -8,7 +8,7 @@
 
         body {
             padding: 20px;
-            background-color: rgba(116, 123, 224, 0.829);
+            background-color: rgba(116, 224, 116, 0.829);
         }
 
         #video, #canvas {
@@ -73,9 +73,10 @@
                 lastMovementTime = now;
                 lastFrame = currentFrame;
             } else if (timeDiff >= 500) { // If no movement for half a second
-                if (countActivePixels(simplifiedPixels) >= 500) { // Define threshold for significant movement
+                if (countActivePixels(simplifiedPixels) >= 1) { // Define threshold for significant movement
                     console.log("Significant movement detected!");
                     console.log("Active pixels:", simplifiedPixels);
+                    console.log(simplifiedPixels)
                 }
                 resetPixelGrid();
             }
